# high-frequency-shenanigans

./: CMakeLists.txt  README.md  main.cpp
documentation/: benchmark_v0.0.md  benchmark_v1.0.md
include/orderbook/: Limit.hpp  ObjectPool.hpp  Order.hpp  OrderBook.hpp  Protocol.hpp  Types.hpp
src/: Benchmark.cpp  OrderBook.cpp
